Revamp (Fixed the z-index of listed elements)

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
 
 li {
     margin: 5px
+    z-index = -1;
 }
 
 #navbar {
@@ -41,6 +42,7 @@ li {
 
 #navbar li {
     float: left;
+    margin: 0px;
 }
 
 #navbar li a {
